Use Optional instead of returning null in some cases
- And refactor some exception handling and checks