@@ -7,6 +7,7 @@ package com.archimatetool.script;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 
 /**
@@ -20,20 +21,24 @@ public class ScriptFiles {
     public static final String HIDDEN_MARKER_FILE = ".hidden";
     
 	public static boolean isScriptFile(File file) {
-        return file != null && file.isFile() && IScriptEngineProvider.INSTANCE.getProviderForFile(file) != null;
+        return file != null && file.isFile() && IScriptEngineProvider.INSTANCE.hasProviderForFile(file);
     }
 	
     public static boolean isLinkedFile(File file) {
 	    return file != null && file.isFile() && file.getName().toLowerCase().endsWith(LINK_EXTENSION);
 	}
 	
-	public static File resolveLinkFile(File file) throws IOException {
-	    byte[] bytes = Files.readAllBytes(file.toPath());
-	    return new File(new String(bytes));
+	public static File resolveLinkFile(File file) {
+        try {
+            String content = Files.readString(file.toPath(), StandardCharsets.UTF_8).trim();
+            return new File(content);
+        }
+        catch(IOException ex) {
+            return file;
+        }
 	}
 	
 	public static void writeLinkFile(File linkFile, File linked) throws IOException {
 	    Files.write(linkFile.toPath(), linked.getAbsolutePath().getBytes());
 	}
-	
 }
